workspace = {members = ["fsr"]}

[package]
name = "mod_zrs"
version = "0.1.0"
edition = "2021"
publish = ["rsproxy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fsr = { path = "./fsr" }
libc = "0.2.151"
lazy_static="1.4"
futures = "0.3.30"
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"]}
paste = { version = "1.0.14" }
md5 = "0.7.0"
reqwest =  { version = "0.11.24", features=["blocking", "gzip", "brotli", "deflate"]}
chrono = { version = "0.4.34" }

[build-dependencies]
tonic-build = "0.10"

[lib]
crate-type = ["dylib"]
name = "mod_zrs"
path = "./src/mod_zrs.rs"

[features]
codegen = []
