workspace = {members = ["switch-sys"]}

[package]
name = "mod_zrs"
version = "0.1.0"
edition = "2021"
publish = ["rsproxy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
switch-sys = { path = "./switch-sys" }
libc = "0.2.151"
lazy_static="1.4"
futures = "0.3.30"
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"]}
paste = { version = "1.0.14" }
md5 = "0.7.0"
reqwest =  { version = "0.11.24", features=["rustls-tls","blocking", "gzip", "brotli", "deflate", "multipart", "stream"], default-features = false}
chrono = { version = "0.4.34" }
regex = { version = "1" }
rand = "0.8.5"
redb = "1.5.1"
prost-types = "0.12.3"

[build-dependencies]
tonic-build = "0.10"

[profile.release]
strip = true
lto = true

[lib]
crate-type = ["dylib"]
name = "mod_rustit"
path = "src/mod_rustit.rs"

[features]
codegen = []
proto = []
