[package]
name = "fsr"
version = "0.1.0"
edition = "2021"
publish = ["rsproxy"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.151"
lazy_static="1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0", registry = "rsproxy" }

[build-dependencies]
bindgen = {version = "0.69.1", default_features = true}